Add sidebar and styles

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,2 +1,7 @@
 en:
   title: "Book-hoard"
+  global:
+    new_record: "New %{record_name}"
+    copyright: "Copyright William E. Bolton, PhD. All Rights Reserved."
+    website_cta: "For more on the developer, see "
+    website_link: "https://william-bolton.com"
